fix: multiple issue on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@ html {
   background-color: white;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #111;
+    color: white;
+  }
+}
+
